# LLM_ABM

./: .gitignore  ARCHITECTURE.md  LICENSE  LLM_ABM_LIBRARY_SPEC.md  MANIFEST.in  README.md  example_balanced_predator_prey.py  example_custom_rules.py  example_flocking.py  example_predator_prey.py  example_realistic_predator_prey.py  example_streaming.py  example_v2_predator_prey.py  pyproject.toml  test_advanced_features.py  test_docs.py  test_refactor.py  test_simple.py
agentstan/: __init__.py  __main__.py
agentstan/ai/: __init__.py  generate.py  interpret.py  llm_behavior.py  llm_budget.py  llm_memory.py  steer.py  validate.py
agentstan/analysis/: __init__.py  events.py  population.py
agentstan/core/: __init__.py  actions.py  agent.py  collectors.py  environment.py  intervention.py  logger.py  observer.py  scheduler.py  simulation.py
agentstan/experiment/: __init__.py  batch.py  sweep.py
agentstan/server/: __init__.py  app.py  serialize.py
examples/: epidemic_sir.py  flocking.py  predator_prey.py  schelling.py  wealth_distribution.py
llm_abm/: __init__.py  __main__.py  api_v2.py  chat.py  docs.py  docs_v2.py  prompt.py
llm_abm/core/: __init__.py  action_processor.py  agent.py  agent_system.py  grid.py  model.py  rule_engine.py  scheduler.py  simulation.py
llm_abm/rules/: __init__.py  interaction.py  lifecycle.py  movement.py
llm_abm/utils/: export.py  validation.py  visualize.py
tests/: test_analysis.py  test_core.py  test_experiment.py  test_intervention.py  test_llm_behavior.py  test_network.py  test_observer.py  test_steer.py  test_transform.py
