[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentstan"
version = "0.1.0"
description = "AI-native agent-based modeling framework. Simulate, Test, Analyze, Narrate."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["agent-based-modeling", "abm", "simulation", "llm", "ai", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
ai = [
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
agentstan = "agentstan.__main__:main"

[project.urls]
Homepage = "https://github.com/systemshift/agentstan"
Repository = "https://github.com/systemshift/agentstan"

[tool.setuptools]
packages = ["agentstan", "agentstan.core", "agentstan.experiment", "agentstan.analysis", "agentstan.ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
